# sint

./: README.md
sint-ftl/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  GEMINI.md  README.md  generate_solution.py  start_game.py
sint-ftl/ai/: agent.py  bindings_wrapper.py  context.py  game_agent.py  game_types.py  requirements.txt  system_prompt.txt  tools.py
sint-ftl/client/: Cargo.toml  Trunk.toml  index.html
sint-ftl/client/src/: app.rs  chat.rs  game.rs  lib.rs  lobby.rs  main.rs  map.rs  state.rs  ws.rs
sint-ftl/client/tests/: client_test.rs  web.rs
sint-ftl/core/: Cargo.toml  pyproject.toml
sint-ftl/core/examples/: dump_schema.rs  print_sizes.rs
sint-ftl/core/src/: bindings.rs  field_map.rs  lib.rs  logic.rs  small_map.rs  types.rs
sint-ftl/core/src/logic/: actions.rs  cards.rs  map_gen.rs  pathfinding.rs  resolution.rs
sint-ftl/core/src/logic/cards/: behavior.rs  deck.rs  mod.rs  registry.rs
sint-ftl/core/src/logic/cards/impls/: c01_afternoon.rs  c02_static.rs  c03_seagull.rs  c04_slippery.rs  c05_rain.rs  c06_waves.rs  c07_costume.rs  c08_mice.rs  c09_short_circuit.rs  c10_leak.rs  c11_mutiny.rs  c12_fog.rs  c13_anchor.rs  c14_jammed.rs  c15_man_overboard.rs  c16_headwind.rs  c17_listing.rs  c18_clogged.rs  c19_attack_wave.rs  c21_sing.rs  c23_no_light.rs  c24_lucky_dip.rs  c25_panic.rs  c26_seasick.rs  c27_alarm.rs  c28_anchor_loose.rs  c29_rudderless.rs  c30_big_leak.rs  c31_blockade.rs  c32_weird_gifts.rs  c33_flu.rs  c34_dough.rs  c35_stowaway.rs  c36_turbo.rs  c37_recipe.rs  c38_golden_nut.rs  c39_staff.rs  c40_sticky.rs  c41_present.rs  c42_book.rs  (+63 more)
sint-ftl/core/src/logic/handlers/: hazard_actions.rs  item_actions.rs  mod.rs  move_action.rs  system_actions.rs
sint-ftl/core/tests/: action_validation.rs  actions.rs  blockade.rs  boss_mechanics.rs  card_behaviors.rs  cards.rs  cargo_fire.rs  client_contract.rs  combat_mechanics.rs  deterministic_undo.rs  edge_cases.rs  error_messages.rs  flu_wave_test.rs  fuzz_test.rs  game_over.rs  hazard_interactions.rs  hazards.rs  hazards_mechanics.rs  hull_damage_v2.rs  interactions.rs  invalid_actions.rs  invariant_checks.proptest-regressions  invariant_checks.rs  inventory.rs  inventory_actions.rs  inventory_limits.rs  join_logic.rs  layout_logic.rs  listing_card.rs  lobby_actions.rs  mechanics.rs  mechanics_v2.rs  missing_cards.rs  new_actions.rs  new_cards.rs  new_rules.rs  pass_validation.rs  pickup_logic.rs  planning_loop.rs  projected_validation.rs  (+24 more)
sint-ftl/docker/: entrypoint.sh
sint-ftl/docker/nginx/: nginx.conf
sint-ftl/docs/: action_schema.json  ai_guidelines.md  api_schema.md  architecture.md  card_manifest.md  map_system_v2.md  plan.md  rules.md  strategy.md  test_scenarios.md
sint-ftl/docs/optimize/: investigator_playbook.md  main_playbook.md
sint-ftl/scripts/: common.py  run_agent.py  run_optimize.sh  run_rl.py  run_solution.py  run_solve.py  run_solve.sh  run_solver.py  start_game.py
sint-ftl/server/: Cargo.toml
sint-ftl/server/src/: lib.rs  main.rs
sint-ftl/server/tests/: integration.rs
sint-ftl/solver/: Cargo.toml  pyproject.toml
sint-ftl/solver/rl/: .gitignore  dashboard.py  env.py  evaluate.py  test_callback.py  test_env.py  test_robustness.py  test_sessions.py  train.py
sint-ftl/solver/solutions/: execute_solution.py  gemini_solver.py  generate_solution.py  prompt_task.md  solution_6p.txt  solution_rounds.py
sint-ftl/solver/src/: beam_search.rs  bindings.rs  driver.rs  heuristic.rs  lib.rs  macro_actions.rs  optimization.rs  replay.rs  scoring.rs  search.rs  state_node.rs  tui.rs  verification.rs
sint-ftl/solver/src/scoring/: beam.rs  rhea.rs  rl.rs
sint-ftl/solver/src/search/: beam.rs  config.rs  rhea.rs
sint-ftl/solver/src/tui/: log.rs  map.rs  mod.rs  optimization.rs  players.rs  score.rs  situations.rs  stats.rs
sint-ftl/solver/tests/: beam_test.rs  driver_test.rs  optimization_test.rs  reward_density_test.proptest-regressions  reward_density_test.rs  rhea_test.rs  rl_proptest.proptest-regressions  rl_proptest.rs  rl_scorer_test.rs  scoring_test.rs  system_understanding.rs  verification_test.rs
