[package]
name = "sint-client"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen-futures = "0.4"
uuid = { version = "1.19", features = ["v4", "serde", "js"] }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
sint-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
console_log = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "Window",
    "Location",
    "UrlSearchParams",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
