[package]
name = "sint-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sint_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# WASM support for RNG
getrandom = { version = "0.2", features = ["js"] }

# Python bindings
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pythonize = { version = "0.27", optional = true }
log = "0.4.29"

[features]
schema = []
python = ["dep:pyo3", "dep:pythonize"]
