[package]
name = "sint-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "sint_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["uuid1"] }
rand = { version = "0.9", features = ["std_rng"] }
thiserror = "2.0"
uuid = { version = "1.19", features = ["v4", "serde", "js"] }
smallvec = { version = "1.13", features = ["serde"] }

# WASM support for RNG
getrandom = { version = "0.3" }

# Python bindings
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pythonize = { version = "0.27", optional = true }
log = "0.4.29"

[features]
schema = []
python = ["dep:pyo3", "dep:pythonize"]
