[package]
name = "sint-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sint-core = { path = "../core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19", features = ["v4"] }
dashmap = "6.1" # Concurrent map for Rooms

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
