[package]
name = "sint-solver"
version = "0.1.0"
edition = "2024"

[lib]
name = "sint_solver"
crate-type = ["cdylib", "rlib"]

[dependencies]
sint-core = { path = "../core", features = ["python"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pythonize = { version = "0.27", optional = true }
once_cell = "1.19"
rayon = "1.11.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
rand_distr = "0.5.1"
dashmap = "6.1.0"
serde_json = "1.0.145"
crossbeam-channel = "0.5.15"
sysinfo = "0.37.2"

[features]
python = ["dep:pyo3", "dep:pythonize"]

[dev-dependencies]
proptest = "1.6"
